# sysexxer-ng

./: .gitmodules  CMakeLists.txt  README.md
cmake/: RtMidi.cmake
po/fr/: sysexxer-ng.po
resources/application/: sysexxer-ng.desktop  sysexxer-ng.xpm
resources/man/: sysexxer-ng.1  sysexxer-ng.fr.1
resources/mime/: sysexxer-ng-syx.xml
scripts/: i18n.sh
sources/: app_i18n.h  config.cc  config.h  dnd_hold_browser.cc  dnd_hold_browser.h  hyperlink_button.cc  hyperlink_button.h  main.cc  sysex_send.cc  sysex_send.h  system_exclusive.cc  system_exclusive.h  utility.cc  utility.h  window.cxx  window.fl  window.h  window_impl.cc
sources/device/: midi.cc  midi.h  midi_apis.cc  midi_apis.h
